--- a/packages/interactive/src/switch/switch.module.css
+++ b/packages/interactive/src/switch/switch.module.css
@@ -1,4 +1,4 @@
-@import "@uiid/tokens/components/switch.tokens.css";
+@import "@uiid/tokens/switch.tokens.css";
 
 .switch-root {
   position: relative;
