--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -88,6 +88,11 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
+    &:focus {
+      outline: var(--globals-outline-style) var(--globals-outline-width) var(--globals-outline-color);
+      outline-offset: var(--globals-outline-offset);
+    }
   }
 
   [data-is-popup="true"] {
