--- a/packages/buttons/src/button/button.module.css
+++ b/packages/buttons/src/button/button.module.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   font-size: var(--button-fontSize);
+  font-weight: var(--button-font-weight);
   height: var(--adjusted-button-height);
   justify-content: flex-start;
   overflow: hidden;
