--- a/packages/calendars/src/calendars.styles.css
+++ b/packages/calendars/src/calendars.styles.css
@@ -1,3 +1,6 @@
+/** @see: https://daypicker.dev/docs/styling */
+@import "react-day-picker/style.css";
+
 .rdp-root {
   --rdp-accent-color: var(--shade-accent);
   --rdp-day_button-border-radius: var(--globals-border-radius);
