--- a/packages/interactive/src/toggle-group/toggle-group.module.css
+++ b/packages/interactive/src/toggle-group/toggle-group.module.css
@@ -49,7 +49,7 @@
     left: 50%;
     translate: -50% var(--active-toggle-top, 0);
     height: var(--active-toggle-height, 0);
-    width: var(--toggle-size);
+    width: 100%;
   }
 }
 
