--- a/packages/interactive/src/tabs/tabs.module.css
+++ b/packages/interactive/src/tabs/tabs.module.css
@@ -1,16 +1,9 @@
-.Tabs {
-  border: 1px solid var(--shade-muted);
-  border-radius: 0.375rem;
-}
+@import "@uiid/tokens/tabs.tokens.css";
 
-.List {
-  display: flex;
+.tabs-list {
   position: relative;
   z-index: 0;
-  padding-inline: 0.25rem;
-  justify-content: center;
-  gap: 0.25rem;
-  box-shadow: inset 0 -1px var(--shade-muted);
+  box-shadow: inset 0 -1px var(--tabs-list-border);
 }
 
 .Tab {
@@ -18,29 +11,24 @@
   align-items: center;
   justify-content: center;
   border: 0;
-  margin: 0;
   outline: 0;
+  font-weight: 600;
+  cursor: pointer;
   background: none;
-  appearance: none;
-  color: var(--shade-halftone);
-  font-family: inherit;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: 500;
+  color: var(--tabs-tab-color-default);
   user-select: none;
   white-space: nowrap;
   word-break: keep-all;
-  padding-inline: 1.5rem;
-  padding-block: 0;
-  height: 2rem;
+  padding-inline: var(--globals-padding-x);
+  height: var(--tabs-tab-height);
 
   &[data-selected] {
-    color: var(--shade-accent);
+    color: var(--tabs-tab-color-active);
   }
 
   @media (hover: hover) {
     &:hover {
-      color: var(--shade-accent);
+      color: var(--tabs-tab-color-active);
     }
   }
 
@@ -58,28 +46,26 @@
   }
 }
 
-.Indicator {
+.tabs-indicator {
   position: absolute;
   z-index: -1;
   left: 0;
-  top: 50%;
+  bottom: 0;
   translate: var(--active-tab-left) -50%;
   width: var(--active-tab-width);
-  height: 1.5rem;
-  border-radius: 0.25rem;
-  background-color: var(--shade-surface);
+  height: var(--tabs-indicator-height);
+  background-color: var(--tabs-indicator-color-bg);
   transition-property: translate, width;
-  transition-duration: 200ms;
-  transition-timing-function: ease-in-out;
+  transition-duration: var(--globals-transition-timing);
 }
 
-.Panel {
+.tabs-panel {
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 8rem;
+  height: var(--tabs-panel-minHeight);
   outline: 0;
+  opacity: 1;
+  transition: all var(--tabs-panel-transition-timing) ease-in-out;
+  transform: translate3d(0, 0, 0);
 
   &:focus-visible {
     outline: 2px solid var(--shade-foreground);
@@ -88,12 +74,7 @@
   }
 
   &[hidden] {
-    display: none;
+    opacity: 0;
+    transform: translate3d(0, 10%, 0);
   }
-}
-
-.Icon {
-  width: 2.5rem;
-  height: 2.5rem;
-  color: var(--shade-halftone);
 }
