--- a/packages/interactive/src/tabs/tabs.module.css
+++ b/packages/interactive/src/tabs/tabs.module.css
@@ -60,12 +60,14 @@
 }
 
 .tabs-panel {
+  --timing: var(--globals-transition-timing);
   position: relative;
   height: var(--tabs-panel-minHeight);
   outline: 0;
   opacity: 1;
-  transition: all var(--tabs-panel-transition-timing) ease-in-out;
+  transition: all var(--timing) ease-in-out;
   transform: translate3d(0, 0, 0);
+  transition-delay: calc(var(--timing) / 2);
 
   &:focus-visible {
     outline: 2px solid var(--shade-foreground);
@@ -75,6 +77,7 @@
 
   &[hidden] {
     opacity: 0;
-    transform: translate3d(0, 10%, 0);
+    transform: translate3d(0, 5%, 0);
+    transition-delay: 0s;
   }
 }
