feat: opening up options

--- a/packages/interactive/src/carousel/subcomponents/carousel-slide.module.css
+++ b/packages/interactive/src/carousel/subcomponents/carousel-slide.module.css
@@ -1,4 +1,6 @@
 .carousel-slide {
-  flex: 0 0 100%;
+  /* fullwidth */
+  flex: 0 0 var(--carousel-slide-size); /* Adapt slide size to its content */
   min-width: 0;
+  max-width: 100%; /* Prevent from growing larger than viewport */
 }
