feat: done noodling with carousel for now

--- a/packages/interactive/src/carousel/subcomponents/carousel-control.module.css
+++ b/packages/interactive/src/carousel/subcomponents/carousel-control.module.css
@@ -1,6 +1,10 @@
 .carousel-control {
   all: unset;
 
+  [data-orientation="vertical"] & {
+    margin-inline: auto;
+  }
+
   &:disabled {
     opacity: var(--globals-disabled-opacity);
     cursor: not-allowed;
