--- a/packages/calendars/src/month-carousel/subcomponents/month-carousel-slide.module.css
+++ b/packages/calendars/src/month-carousel/subcomponents/month-carousel-slide.module.css
@@ -1,1 +1,10 @@
-
+.month-carousel-slide {
+  aspect-ratio: 2;
+  width: 3rem;
+  background-color: var(--shade-foreground);
+  color: var(--shade-background);
+  border-radius: calc(var(--globals-border-radius) / 2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
