--- a/packages/interactive/src/carousel/subcomponents/carousel-content.module.css
+++ b/packages/interactive/src/carousel/subcomponents/carousel-content.module.css
@@ -1,3 +1,12 @@
 .carousel-content {
   overflow: hidden;
+  width: calc(
+    (var(--carousel-size, 100%) * var(--carousel-slides-in-view, 1)) +
+      (var(--carousel-slide-gap, 2) * (var(--carousel-slides-in-view, 1) - 1) * (var(--spacing-scale) * 2))
+  );
+
+  &[data-orientation="vertical"] {
+    /* todo: implement vertical carousel */
+    height: var(--carousel-size, 100%);
+  }
 }
