--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -69,18 +69,7 @@
   body {
     background-color: var(--shade-background);
     color: var(--shade-foreground);
-    font-family:
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
-      sans-serif;
+    font-family: sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
@@ -89,10 +78,11 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+  }
 
-    &:focus {
-      outline: var(--globals-outline-style) var(--globals-outline-width) var(--globals-outline-color);
-      outline-offset: var(--globals-outline-offset);
+  @media (prefers-reduced-motion: no-preference) {
+    html {
+      interpolate-size: allow-keywords;
     }
   }
 
@@ -111,5 +101,15 @@
     &[data-instant] {
       transition-duration: 0ms;
     }
+  }
+
+  code {
+    font-size: 80% !important;
+    color: var(--shade-accent);
+    padding: 0.25rem 0.5rem;
+    margin-inline: 0.125rem;
+    background-color: var(--shade-surface);
+    border-radius: var(--globals-border-radius);
+    border: var(--globals-border-width) solid var(--shade-muted);
   }
 }
