fix: next error

--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -112,6 +112,14 @@
     }
   }
 
+  a {
+    text-decoration: underline;
+    &:hover {
+      color: var(--shade-accent);
+      text-decoration: none;
+    }
+  }
+
   code {
     font-size: 80% !important;
     color: var(--shade-accent);
