--- a/packages/navigation/src/sidebar/subcomponents/sidebar-container.module.css
+++ b/packages/navigation/src/sidebar/subcomponents/sidebar-container.module.css
@@ -1,5 +1,5 @@
 .sidebar-container {
-  display: fixed;
+  position: fixed;
   inset-block: 0;
   z-index: 10;
   display: hidden;
@@ -9,5 +9,43 @@
 
   @media (min-width: 768px) {
     display: flex;
+  }
+
+  &[data-side="left"] {
+    left: 0;
+
+    [data-collapsible="offcanvas"] & {
+      left: calc(var(--sidebar-width) * -1);
+    }
+  }
+
+  &[data-side="right"] {
+    right: 0;
+
+    [data-collapsible="offcanvas"] & {
+      right: calc(var(--sidebar-width) * -1);
+    }
+  }
+
+  &[data-variant="floating"] {
+    padding: 0.5rem;
+  }
+
+  &:is([data-variant="floating"], [data-variant="inset"]) {
+    [data-collapsible="icon"] & {
+      width: calc(var(--sidebar-width-icon) + var(--spacing-scale) * 4 + 2px);
+    }
+  }
+
+  [data-collapsible="icon"] & {
+    width: var(--sidebar-width-icon);
+  }
+
+  [data-side="left"] & {
+    border-right: var(--globals-border-width) solid var(--globals-border-color);
+  }
+
+  [data-side="right"] & {
+    border-left: var(--globals-border-width) solid var(--globals-border-color);
   }
 }
