--- a/packages/navigation/src/sidebar/subcomponents/sidebar-outer.module.css
+++ b/packages/navigation/src/sidebar/subcomponents/sidebar-outer.module.css
@@ -2,6 +2,7 @@
   color: var(--shade-foreground);
   display: none;
   width: var(--sidebar-width);
+  transition: all var(--globals-transition-timing) linear;
 
   &[data-state="collapsed"] {
     width: 0;
